--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,7 @@ p{
     background-color:var(--button-backgroung-color);
     border-style: none;
     border-radius: 4px;
+    min-width: 73px;
 }
 .portfolio-menu-button:hover,
 .portfolio-menu-button:focus{
