--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body{
 
 /* Styles discharge */
 
-.list{
+ul{
     padding: 0;
     margin: 0;
     list-style: none;
@@ -47,21 +47,27 @@ p{
 
 /* Header styles */
 
-.header-container,
-.container{
-    width: 1600px;
-    margin: 0;
-    border: 1px solid #ECECEC;
-}
-
-.nav-container{
+.header-container{
+    max-width: 1600px;
+    margin: auto;
+    border-bottom: 1px solid #ECECEC;
     display: flex;
     align-items: center;
-    width: 1200px;
-    height: 80px;
-    margin-left: 200px;
-    margin-right: auto;
 }
+
+.container{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+}
+
 
 .logo{
     font-family: Raleway,sans-serif;
@@ -86,9 +92,6 @@ p{
 
 .site-nav-list{
     display: flex;
-    list-style: none;
-    padding-top: 32px;
-    padding-bottom: 32px;
 }
 
 .site-nav-item{
@@ -164,18 +167,9 @@ p{
 .hero-section{
     text-align: center;
     background-color: var(--hero-background-color);
-    height: 600px;
-    margin: auto;
-    width: 1600px;
-    padding-top: 94px;
-    padding-bottom: 94px;
-    padding-left: 15px;
-    padding-right: 15px;
-    justify-content: center;
-}
-.hero-container{
-    width: 1200px;
-    margin: auto;
+    padding: 200px 0;
+    margin: 0 auto;
+    max-width: 1600px;
 }
 
 .hero-title{
@@ -189,8 +183,8 @@ p{
     background-color:var(--hero-background-color);
     width: 696px;
     height: 120px;
-    margin-left: 237px;
-    margin-top: 106px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 30px;
 }
 
@@ -218,16 +212,8 @@ p{
 }
 /* Feature section styles */
 
-.features-section{
-    width: 1600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 94px;
-    padding-bottom: 94px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0;
+.section{
+    padding: 94px 0 94px 0;
 }
 
 .features-container{
@@ -236,14 +222,11 @@ p{
 }
 
 .features-list{
-    list-style: none;
     display: flex;
-    padding: 0;
 }
 
 .features-list-item{
     width: 270px;
-    height: 101px;
 }
 
 .features-list-title{
@@ -272,29 +255,8 @@ p{
 
 /* Our profile section styles */
 
-.our-profile-section{
-    width: 1600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 0px;
-    padding-bottom: 94px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.our-profile-container{
-    width: 1200px;
-    margin: 0;
-    justify-content: center;
-}
-
 .our-profile-list-images{
-    list-style: none;
     display: flex;
-    height: 294px;
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
 }
 
 .our-profile-images-img{
@@ -306,6 +268,11 @@ p{
     margin-right: 0;
 }
 
+img{
+    max-width: 100%;
+    height: auto;
+}
+
 .our-profile-second-title{
     font-weight: 700;
     font-size: 36px;
@@ -313,36 +280,16 @@ p{
     text-align: center;
     color:var(--title-text-color);
     margin-bottom: 50px;
-    margin-left: 397px;
-    width: 396px;
-    height: 42px;
 }
 
 /* Our team section styles*/
 
 .our-team-section{
-    width: 1600px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: var(--button-backgroung-color);
-    padding-top: 94px;
-    padding-bottom: 94px;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.our-team-container{
-    width: 1200px;
-    justify-content: center;
 }
 
 .our-team-list{
     display: flex;
-    text-decoration: none;
-    list-style: none;
-    padding: 0;
-    margin: 0;
 }
 
 .our-team-item{
@@ -360,9 +307,10 @@ p{
     text-align: center;
     color:var(--title-text-color);
     margin-bottom: 50px;
-    margin-left: 453px;
-    width: 396px;
-    height: 42px;
+}
+
+.our-team-item-inscription{
+    padding: 30px 0;
 }
 
 .our-team-item-third-title{
@@ -372,29 +320,20 @@ p{
     text-align: center;
     list-style: none;
     color:var(--title-text-color);
-    margin: 30px 59px 10px 60px;
 }
 .our-team-item-text{
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    margin-bottom: 30px;
 }
 
 /* Footer styles */
 
 .footer-container{
     background-color: var(--hero-background-color);
-    width: 1600px;
-    height: 252px;
-    margin: 0;
-}
-
-.footer-container-data{
-    width: 1200px;
+    padding: 60px 0;
+    max-width: 1600px;
     margin: auto;
-    display: block;
-    padding: 60px 15px 60px 15px;
 }
 
 .footer-logo{
@@ -403,7 +342,6 @@ p{
     line-height: 1.19;
     text-decoration: none;
     color: var(--title-text-color);
-    margin: 0 0 11px 0;
 }
 
 
@@ -413,25 +351,23 @@ p{
     line-height: 1.19;
     text-decoration: none;
     color:var(--primary-white-color);
-    padding-top: 60px;
-    padding-bottom: 20px;
 }
 
-.footer-contacts-list{
-    width: 1200px;
+address{
     font-style: normal;
-    list-style: none;
-    padding: 0;
+    margin-top: 20px;
 }
 
-.footer-item{
+.footer-contacts-address{
+    text-decoration: none;
+    color: var(--main-background-color);
+}
+.footer-contacts-link{
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.6);
     margin-top: 9px;
 }
 
-.footer-contacts-link{
-    text-decoration: none;
-    color: var(--primary-white-color);
-}
 /* Portfolio buttons styles */
 
 .portfolio-menu{
@@ -445,10 +381,9 @@ p{
 }
 
 .portfolio-menu-list{
-    list-style: none;
     display: flex;
-    margin: 0 0 0 495px;
-    padding: 0;
+    justify-content: center;
+    margin-bottom: 50px;
 }
 
 .portfolio-menu-item{
@@ -490,17 +425,21 @@ p{
 /* Portfolio list styles */
 
 .portfolio-list{
-    list-style: none;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 215px;
-    padding: 0;
 }
 
 .portfolio-list-item{
     margin-right: 30px;
     margin-bottom: 30px;
-    border: 1px solid #eeeeee;
+}
+
+.portfolio-list-item:nth-child(3n){
+    margin-right: 0;
+}
+
+.portfolio-list-item:nth-child(n+7){
+    margin-bottom: 0;
 }
 
 .potfolio-list-link{
@@ -509,6 +448,11 @@ p{
     width: 370px;
     height: 294px;
 }
+
+.portfolio-list-inscription{
+    padding: 20px 24px;
+    border-bottom: 1px solid #eeeeee;
+}
 .portfolio-list-title{
     font-weight: 700;
     font-size: 18px;
@@ -516,9 +460,6 @@ p{
     text-align: left;
     letter-spacing: 0.06em;
     color: var(--title-text-color);
-    width: 322px;
-    height: 36px;
-    margin: 20px 24px 4px 24px;
 }
 .portfolio-list-text{
     font-weight: 400;
@@ -526,7 +467,5 @@ p{
     line-height: 1.88;
     text-align: left;
     color: var(--primary-text-color);
-    width: 322px;
-    height: 30px;
-    margin: 0 24px 20px 24px;
+    padding-top: 4px;
 }
